# Alltius-AI

./: README.md  output2.json  pyproject.toml  requirements.txt  run_extractor.py
scripts/: benchmark.py
src/alltius_ai/: __init__.py  cli.py  exporters.py  heading_detection.py  models.py  pdf_extractor.py  plugins.py  table_extractor.py
tests/: test_extraction_basic.py  test_hierarchy_and_merge.py  test_markdown_and_plugins.py
